# twitch-churn-predictor

./: LICENSE  README.md  main.py  pyproject.toml
data/: query.sql
docs/: database.md  raw_database.md
model/: baseline.pkl
src/: pipeline.sh  run_scoring.sh
src/feature_store/: config.yaml  execute.py  execute.sh  feature_store_general.sql  feature_store_horario.sql  feature_store_pontos.sql  feature_store_produtos.sql  feature_store_transacoes.sql  ingest.py  ingest_config.yaml
src/feature_store/docs/: fs_cliente_engajamento_21d.md  fs_cliente_periodo_dia_21d.md  fs_cliente_pontos_21d.md  fs_cliente_produto_21d.md  fs_cliente_rfv_21d.md
src/feature_store/queries/: fs_cliente_engajamento_21d.sql  fs_cliente_periodo_dia_21d.sql  fs_cliente_pontos_21d.sql  fs_cliente_produto_21d.sql  fs_cliente_rfv_21d.sql
src/predict/: etl.sql  etl_churn_scoring.sql  predict.py  predict_churn.py  predict_config.yaml
src/train/: abt_churn_21d.sql  train.py  train_churn_model.py  train_config.yaml
