[project]
name = "ds-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feature-engine>=1.9.4",
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.4",
]
